[project]
name = "Energy-Charts"
version = "1.1.0"
description = "Module to access the API of the energy-charts.info website."
authors = [
    { name = "Alexander Blinn" },
    { name = "hosenchef" },
]
requires-python = ">=3.13,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "requests>=2.32.3,<3",
    "pandas>=2.2.3,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "ruff>=0.8.3,<0.9",
    "ipykernel>=6.29.5,<7",
]

[tool.uv]
default-groups = "all"

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = "energy_charts"
